--- a/lambda_serverless/serverless.yml
+++ b/lambda_serverless/serverless.yml
@@ -20,12 +20,14 @@ service: lambda-serverless
 # Check out our docs for more details
 frameworkVersion: "3"
 
+plugins:
+  - serverless-dotenv-plugin
+  
 custom:
   dotenv:
     path: ../../chatbot/.env.development.local
     include:
-      - AUTH0_CLIENT_ID
-      - AUTH0_CLIENT_SECRET
+      - REACT_APP_GPT_API_KEY
 
 provider:
   name: aws
