--- a/lambda_serverless/serverless.yml
+++ b/lambda_serverless/serverless.yml
@@ -72,11 +72,11 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  firstLambda:
+  greekMythologyChatbotEndpoint:
     handler: functions/lib/Prompting.handler
     url: true 
-    description: This is the first lambda function - TODO replace w/ API calls based on state passed in
-    timeout: 10
+    description: Chatbot prompting handler
+    timeout: 16
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
